--- a/safe/src/main/resources/application.yml
+++ b/safe/src/main/resources/application.yml
@@ -1,2 +1,36 @@
 server:
   port: 8001
+  tomcat:
+    uri-encoding: UTF-8
+spring:
+  datasource:
+    username: root
+    password: root
+    url: jdbc:mysql://rm-uf6m83o7hz06aw5me0o.mysql.rds.aliyuncs.com:3306/realc_safe?characterEncoding=UTF-8&serverTimezone=GMT%2B8
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    type: com.alibaba.druid.pool.DruidDataSource
+
+    initialSize: 10
+    minIdle: 10
+    maxActive: 50
+    maxWait: 60000
+    timeBetweenEvictionRunsMillis: 60000
+    minEvictableIdleTimeMillis: 300000
+    validationQuery: SELECT 1 FROM DUAL
+
+  jpa:
+    # 控制台显示SQL
+    showSql: true
+    hibernate:
+      # 会根据就映射实体类自动创建或更新数据表
+      ddl-auto: update
+      # 默认创建表类型是MyISAM，是非事务安全的，所以无法实现事物回滚
+      # 指定如下方言: 创建的表类型是Innodb，才可以进行对事物的回滚。
+      database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+
+mybatis:
+  ### xml存放路径
+  mapper-locations: classpath:mapper/*Mapper.xml
+  configuration:
+    map-underscore-to-camel-case: true
+    call-setters-on-nulls: true
