--- a/partner/src/main/resources/application.yml
+++ b/partner/src/main/resources/application.yml
@@ -1,2 +1,38 @@
 server:
   port: 10001
+
+spring:
+  datasource:
+    username: realc
+    password: Realc123654@
+    url: jdbc:mysql://rm-uf6m83o7hz06aw5me0o.mysql.rds.aliyuncs.com:3306/realc_platform?characterEncoding=UTF-8&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=true
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    type: com.alibaba.druid.pool.DruidDataSource
+    initialSize: 10
+    minIdle: 10
+    maxActive: 50
+    maxWait: 60000
+    timeBetweenEvictionRunsMillis: 60000
+    minEvictableIdleTimeMillis: 300000
+    validationQuery: SELECT 1 FROM DUAL
+
+  redis:
+    host: r-uf6rjlwgkn4ab7bvgtpd.redis.rds.aliyuncs.com
+    port: 6379
+    max-wait: 30000
+    max-active: 8
+    max-idle: 20
+    min-idle: 0
+    timeout: 3000
+    password: Realc123654@
+
+mybatis:
+  ### xml存放路径
+  mapper-locations: classpath:mapper/*Mapper.xml
+  configuration:
+    map-underscore-to-camel-case: true
+    call-setters-on-nulls: true
+# 打印sql
+logging:
+  level:
+    com.realc.partner.business.master.mapper: debug
